fixed some spacing issues

--- a/frontend/src/components/NewNav/Nav.css
+++ b/frontend/src/components/NewNav/Nav.css
@@ -22,10 +22,10 @@
 	position: relative;
 	width: 100%;
 	z-index: 1;
-	max-width: 1440px;
-	padding-left: 24px;
-	padding-right: 24px;
-	margin: 0px auto;
+}
+
+.nav-logo-container {
+  flex: 1 0 140px;
 }
 
 .nav-logo {
@@ -40,6 +40,12 @@
 	color: rgb(255, 255, 255);
 }
 
+.nav-search {
+  flex: 0 1 auto;
+  min-width: 348px;
+  padding: 0 24px;
+}
+
 .nav-buttons-container {
 	-moz-box-pack: end;
 	-moz-box-align: center;
@@ -48,6 +54,7 @@
 	justify-content: flex-end;
 	height: 80px;
 	display: flex;
+  flex: 1 0 140px;
 }
   .nav-host-container {
     -moz-box-pack: end;
@@ -77,4 +84,40 @@
     white-space: nowrap;
     z-index: 1;
     color: white;
+  }
+
+  .nav-switch-hosting {
+    -moz-box-align: center !important;
+    align-items: center !important;
+    display: flex !important;
+    height: 100% !important;
+    position: relative !important;
+    z-index: 1 !important;
+  }
+
+  .nav-globe {
+    display: inline;
+  }
+
+  .nav-globe-button {
+    appearance: none;
+    background: transparent none repeat scroll 0% 0%;
+    border: 0px none;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+    margin: 0px;
+    outline: currentcolor none medium;
+    overflow: visible;
+    padding: 12px;
+    text-align: inherit;
+    text-decoration: none;
+    user-select: auto;
+    position: relative;
+    white-space: nowrap;
+    z-index: 1;
+    color: rgb(255, 255, 255);
   }
